Inline size based on rem to avoid layout shifts

--- a/css/base.css
+++ b/css/base.css
@@ -32,7 +32,7 @@ body {
 
 .content-box {
 	margin-inline: auto;
-	max-inline-size: 75ch;
+	max-inline-size: 52rem;
 	padding-block: var(--s1);
 	padding-inline: clamp(var(--s0), 5vw, var(--s3));
 }
